--- a/Introdução a Inteligência Artificial/2. Métodos para resolução de problemas.md
+++ b/Introdução a Inteligência Artificial/2. Métodos para resolução de problemas.md
@@ -58,6 +58,33 @@ Será limitado a apenas um nível, ou seja só poderá buscar até um nível esp
 
 # Busca heurística (ou informada)
 É um modelo de busca em que é dada uma informação útil que reduz o tempo de busca.
+- **Função heurística h(n)**
+	**Estima** o custo do caminho entre o nó n e o objeto.
+A **Função heurística** deve 
+
+## Busca Gulosa
+É semelhante a [[#Busca em profundidade]] com backtracking
+	Tenta expandir o nó mais profundo ao nó final com base na estimativa feita pela função heurística h.
+O **custo de busca** é minimizado, uma vez que não expande fora do caminho.
+	Escolhe sempre o caminho mais economico a primeira vista.
+**Não é um algoritmo ótimo.** Uma vez que pode entrar em loops se não detectar a expansão de estados.
+O custo de tempo e memório: **O(b^d)**
+Ele verifica apenas a distância em linha reta até o destino.
+
+![[Pasted image 20250407144124.png]]
+![[Pasted image 20250407144104.png]]
+
+**[[#Busca Gulosa]] X [[#Busca em largura com custo uniforme]]**
+	Gulosa verifica o caminho direto de um nó de origem até um nó de destino
+	Já o de custo uniforme, não sabe a distancia direta de um nó até outro, ele só sabe os valores das arestas que conectam os nós.
+
+## Algoritmo A*
+Tenta minimizar o custo total da solução combinando [[#Busca Gulosa]] e [[#Busca em largura com custo uniforme]].
+Nesse algoritmo, ele pega a distancia em linha reta de um nó a outro, e soma com o valor da aresta já percorrido. O menor valor percorrido é o escolhido.
+Esse algoritmo segue a **Função de avaliação:** f(n) = g(n) + h(n)
+O Algoritmo verifica se já chegou no destino quando h(n) = 0
+![[Pasted image 20250407152140.png]]
+![[Pasted image 20250407145245.png]]
 
 # Agentes
 É algo capaz de perceber seu ambiente por meio de sensores e de agir sobre esse ambiente por meio de atuadores.
