Mudando destino da imagem

--- a/Introdução a Inteligência Artificial/2. Métodos para resolução de problemas.md
+++ b/Introdução a Inteligência Artificial/2. Métodos para resolução de problemas.md
@@ -81,7 +81,7 @@ Ele verifica apenas a distância em linha reta até o destino.
 ## Algoritmo A*
 Tenta minimizar o custo total da solução combinando [[#Busca Gulosa]] e [[#Busca em largura com custo uniforme]].
 Nesse algoritmo, ele pega a distancia em linha reta de um nó a outro, e soma com o valor da aresta já percorrido. O menor valor percorrido é o escolhido.
-Esse algoritmo segue a **Função de avaliação:** f(n) = g(n) + h(n)
+Esse algoritmo segue a **Função de avaliação:** f(n) = g(n) (nó de inicio até nó atual) + h(n) (nó atual em linha retá até o nó destino.)
 O Algoritmo verifica se já chegou no destino quando h(n) = 0
 ![[Pasted image 20250407152140.png]]
 ![[Pasted image 20250407145245.png]]
