Adicionando exemplo de busca heurística

--- a/Introdução a Inteligência Artificial/2. Métodos para resolução de problemas.md
+++ b/Introdução a Inteligência Artificial/2. Métodos para resolução de problemas.md
@@ -86,6 +86,10 @@ O Algoritmo verifica se já chegou no destino quando h(n) = 0
 ![[Pasted image 20250407152140.png]]
 ![[Pasted image 20250407145245.png]]
 
+### Exemplo
+h1(n) = número de peças fora de posição
+h2(n) = somar os valores da distância de cada peça até a sua posição de destino.
+![[Pasted image 20250409153359.png]]
 # Agentes
 É algo capaz de perceber seu ambiente por meio de sensores e de agir sobre esse ambiente por meio de atuadores.
 
@@ -97,3 +101,4 @@ O Algoritmo verifica se já chegou no destino quando h(n) = 0
 		**Actuators:** atuadores
 		**Sensors:** Sensores
 	Os agentes devem executar ações para a coleta de informações.
+
