--- a/Banco de Dados/3. BD.md
+++ b/Banco de Dados/3. BD.md
@@ -85,3 +85,23 @@ Os relacionamentos podem possuir múltiplos graus.
 			![[Pasted image 20250403152943.png]]
 		**Parcial:** Não precisa existir um relacionamento, o objeto pode existir sozinho. Representado por uma linha
 			![[Pasted image 20250403152902.png]]
+
+## Cardinalidade
+Os relacionamentos podem ter uma quantidade mínima, que é dada como sendo a participação, e máxima, que é a cardinalidade.
+![[Pasted image 20250410142434.png]]
+
+Nesse modelo, deixa-se de adotar os dois traços, e a participação total passa a ser expressa como sendo o valor minimo da cardinalidade. Enquanto que o valor máximo é igual ao valor original.
+![[Pasted image 20250410143847.png]]
+
+## Generalização/Especialização
+**Generalização/especialização total**: Toda instancia genérica está associada com outras instâncias.
+No exemplo a seguir, todo funcionário deve ser pessoa Física ou Pessoa Jurídica.
+![[Pasted image 20250410145546.png]]
+
+**Generalização/especialização parcial:** Pode ter instancias genéricas que não está especializadas em outras instâncias
+No exemplo a seguir, um funcionário pode assumir o cargo de gerente de marketing, gerente de vendas ou apenas um funcionário comum.
+![[Pasted image 20250410145937.png]]
+
+## Relacionamento Ternário
+Nesse tipo de relacionamento, utiliza-se o conjunto para identificar a cardinalidade.
+![[Pasted image 20250410152616.png]]
