--- a/Sistemas da Informação/1. Engenharia de requisitos.md
+++ b/Sistemas da Informação/1. Engenharia de requisitos.md
@@ -43,3 +43,38 @@ Atores sõa entivdade que podem performar ator em um Mundo. Eles podem ser Maqui
 ## Stakeholder
 É uma pessoa ou grupo de pessoas que tem um interesse que afete a maquina.
 
+# Erros de requisitos
+**Terminologias**
+	**Falha** é uma situação em que um produto não funciona como esperado. O defeito pode ser a causa da minha falha.
+	**Defeito** é uma falha no produto. Uma situação de mal funcionamento do produto.
+	**Erro** é uma falha humana que gera o defeito
+
+Uma **Machine Failure** é uma situação em que a maquina não satisfaz os requisitos.
+Já a **System Failure** é uma situação em que a maquina e os atores do mundo não satisfazem os objetivos essenciais dos stakeholders. 
+
+Um **defeito de implementação** é um bug de computador.
+Um **defeito do requisito** é uma característica da descrição do requisito que pode causar uma machine failure ou um system failure. Requisitos mal feitos é um defeito de requisito. 
+
+Um **erro de implementação** é um erro causado por um programador na implementação. Normalmente é a causador do defeito de implementação.
+Um **erro de requisito** é um erro na comunicação e entendimento dos requisitos da maquina que podem causar um system failure. 
+
+**Três tipos de erros**
+	**Erro de entendimento** da necessidade do Stakeholder (G): O objetivo não descreve corretamente o objetivo do stakeholder.
+	**Requisitos inadequados devido a rasões incorretas (R):** O requerimento era insuficiente para satisfazer o objetivo (G) quando o domínio (D) é correto.
+	**Premissas invalidas (D):** algumas premissas em domínio (D) que não se adéqua ao mundo.
+
+**Exemploa:**
+![[Pasted image 20250410104611.png]]
+Nesse caso, trata-se de uma Falha do sistema (Machine Failure). Uma vez que as necessidades estavam vagas.
+Os requisitos não foram suficientes para suprir o objetivo de frenagem em uma pista molhada. (**Requisitos inadequados**)
+ 
+Exemplo 2:
+![[Pasted image 20250410114421.png]]
+O software não tinha erro de implementação, mas sim um erro de requisitos.
+
+Exemplo 3:
+![[Pasted image 20250410112830.png]]
+
+Exemplo 4:
+![[Pasted image 20250410112944.png]]
+A justificativa é a mesma do exemplo 2.
