--- a/Banco de Dados/2. Sistemas de Banco de Dados.md
+++ b/Banco de Dados/2. Sistemas de Banco de Dados.md
@@ -5,9 +5,9 @@ Os sistemas de banco de dados trata-se do todo, desde a aplicação em que o Usu
 O SGBD é o software utilizado para gerenciar o banco de dados. 
 Já o banco de dados em si são os dados brutos armazenados.
 
-Quanto a **Definição dos Dados Armazenados (metadados)** é a definição dos dados, ele armazena a estrutura dos dados. Armazena a estrutura dos dados em si.
+**Definição dos Dados Armazenados (metadados)**: armazena a estrutura dos dados. Trata-se das informações individuais que serão armazenados.
 
-==**SBD = (SGBD) + BD**==
+==**SBD = (SGBD) + (BD)**==
 
 # Sistemas Gerenciadores de Banco de Dados
 Os **SGBDs** são os responsáveis por organizar os banco de dados fisicamente nos dispositivos. 
