--- a/Introdução a Inteligência Artificial/1. Apresentação.md
+++ b/Introdução a Inteligência Artificial/1. Apresentação.md
@@ -2,6 +2,19 @@
 	Trata-se de pequenos ajustes em uma LLM para adequar melhor a mudanças. Trata-se de um pós-treinamento.
 
 # Problema de IA
+Todo problema de IA é definido em termos de:
+- **Espaço de estados**
+	Conjunto de todos os estados alcançáveis a partir do estado inicial por qualquer sequência de ações.​
+	- um estado inicial​
+    - um (ou mais) estado final = objetivo​
+- **Ações**
+	Trata-se do que será feito para passar de um estado a outro
+	**Exemplo:** dirigir de uma cidade a outra​
+	**Exemplo:** regras de movimentação de peças no jogo de 8 números​
+ - **Objetivo**
+	Trata-se daquilo que deve ser cumprido. Pode-ser uma propriedade abstrata, como um xeque-mate no xadrez, ou um conjunto de estados finais no mundo, como chegar em Goiânia​.
+ - **Solução**
+	 Um caminho que leva do estado inicial a um estado final.
 Pra resolver problemas de IA, é necessário a definição de um procedimento. Assim, dado um estado inicial, é definido uma sequencia de **caminhos** que levem a um estado desejável.
 
 **Métodos de Busca**
