--- a/Introdução a Inteligência Artificial/2. Métodos para resolução de problemas.md
+++ b/Introdução a Inteligência Artificial/2. Métodos para resolução de problemas.md
@@ -20,24 +20,31 @@ Nesse modelo de busca, adotam-se estratégias especificas:
 ![[Pasted image 20250331152606.png]]
 Segue uma ordem de expansão de nós:
 	Sai de um nó raiz e acessa todos os vizinhos.
+
 Nesse modelo, o algoritmo pode ser **Completo** (encontra uma solução, não necessariamente a mais curta), ou pode ser **Ótima** (Encontra a melhor solução para um algoritmo).
+
+A maior vantagem desse modelo é em relação de custo de tempo, além de ser completa em espaços de estados infinitos.
 
 O problema da **busca em largura** é o custo de memória, uma vez que esse modelo de busca vai ter um maior custo de memória. Esse modelo só dará bons resultados se a árvore de busca for pequena.
 
-## Busca em largura com custo uniforme
+### Busca em largura com custo uniforme
 ![[Pasted image 20250331152626.png]]
 É similar a [[#Busca em largura]] só que começando pelo que possui menor custo. A busca é feita passando por todos os menores caminhos e o menor caminho de todos será o caminho adotado.
 
 
 ## Busca em profundidade
-Faz a expansão da busca pelos nós mais profundas da árvore. Ao chegar ao final e não encontrar uma solução, o algoritmo volta para o nó anterior e tentar fazer outro caminho. Um problema desse algoritmo é que pode ser que um objetivo nunca seja alcançado, já que não existe uma memória dos caminhos percorridos.
+Faz a expansão da busca pelos nós mais profundas da árvore. Ao chegar ao final e não encontrar uma solução, o algoritmo volta para o nó anterior e tentar fazer outro caminho. 
 
-## Busca em profundidade Limitada
+É um algoritmo eficaz em termo de tempo, uma vez que é mais rápida do que a [[#Busca em largura]], contudo não é completa caso a arvore tenha estados infinitos ou seja muito profunda.
+
+### Busca em profundidade Limitada
 Será limitado a apenas um nível, ou seja só poderá buscar até um nível especifico.
 **O custo computacional será: O(nó^nivel)**
 
-## Busca em aprofundamento iterativo
-É uma busca que tenta limites com valores crescentes para encontrar o objetivo.
+### Busca em aprofundamento iterativo
+Tenta limites com valores crescentes, partindo de zero, até encontrar a primeira solução.
+Combina as vantagens de busca em largura com busca em profundidade​.
+Trata-se de um algoritmo ótimo e completo.​
 
 ## Direção de busca
 ### Encadeamento progressivo (Forward Chaining)
@@ -83,6 +90,15 @@ Tenta minimizar o custo total da solução combinando [[#Busca Gulosa]] e [[#Bus
 Nesse algoritmo, ele pega a distancia em linha reta de um nó a outro, e soma com o valor da aresta já percorrido. O menor valor percorrido é o escolhido.
 Esse algoritmo segue a **Função de avaliação:** f(n) = g(n) (nó de inicio até nó atual) + h(n) (nó atual em linha retá até o nó destino.)
 O Algoritmo verifica se já chegou no destino quando h(n) = 0
+Se a heurística for igual a 0 (h(n) = 0), então a busca se torna equivalente a [[#Busca em largura com custo uniforme]].
+
+**Problema do modelo:**
+	Não é utilizado em ambientes de tempo real;
+	Não permite que busca e a navegação seja realizado paralelamente;
+	Não permite que o custo varie com o tempo.
+	O ambiente deve ser totalmente conhecido.
+	Não é possível utilizar valores localizados.
+
 ![[Pasted image 20250407152140.png]]
 ![[Pasted image 20250407145245.png]]
 
@@ -90,6 +106,9 @@ O Algoritmo verifica se já chegou no destino quando h(n) = 0
 h1(n) = número de peças fora de posição
 h2(n) = somar os valores da distância de cada peça até a sua posição de destino.
 ![[Pasted image 20250409153359.png]]
+
+### Variações do Algoritmo A*
+![[Pasted image 20250414140937.png]]
 # Agentes
 É algo capaz de perceber seu ambiente por meio de sensores e de agir sobre esse ambiente por meio de atuadores.
 
