--- a/Sistemas da Informação/1. Engenharia de requisitos.md
+++ b/Sistemas da Informação/1. Engenharia de requisitos.md
@@ -1,7 +1,7 @@
-Trata-se de um conjunto de atividades que concentradas com descobertas, analises e comunicação
+Trata-se de um conjunto de atividades relacionadas a descobertas, analises e comunicação:
 - As necessidades Stakeholders (todos que são afetados pelo software).
-- Um contexto de uso de cada sistema de software
-- Um comportamento e qualidade de cada software de forma que eles devem ser utilizados.
+- Os contextos de uso de cada sistema de software
+- Os requisitos de software, que são os comportamentos e qualidades desejadas externamente visíveis do software necessário para satisfazer as necessidades das partes.
 
 **Todo software tem um requisito.**
 
@@ -28,7 +28,7 @@ Funct   Fenomeno      Stakhold. need
           State or Event
 O mundo é o escopo dos requisito investigados para um software.
 
-## **Fenomenos**
+## **Fenômenos**
 São estados ou eventos observáveis. 
 	**Evento:** é alguma coisa ocorrendo em um dado tempo. 
 	**Estado:** é uma condição de alguma coisa ou de alguém em in tempo especifico
@@ -38,36 +38,36 @@ Existem tanto fenômenos do mundo quanto fenômenos das máquinas.
 	![[Pasted image 20250403111136.png]]
 
 ## Atores
-Atores sõa entivdade que podem performar ator em um Mundo. Eles podem ser Maquinas, agentes, componentes, elementos.
+Atores são entivdade que podem performar ator em um Mundo. Eles podem ser Maquinas, agentes, componentes, elementos.
 
 ## Stakeholder
-É uma pessoa ou grupo de pessoas que tem um interesse que afete a maquina.
+Partes interessadas pelo projeto.
 
 # Erros de requisitos
 **Terminologias**
-	**Falha** é uma situação em que um produto não funciona como esperado. O defeito pode ser a causa da minha falha.
+	**Falha** é uma situação em que um produto não funciona como esperado. O defeito (Causa) pode ser a causa da minha falha (Consequência).
 	**Defeito** é uma falha no produto. Uma situação de mal funcionamento do produto.
-	**Erro** é uma falha humana que gera o defeito
+	**Erro** é uma falha humana que gera o defeito.
 
 Uma **Machine Failure** é uma situação em que a maquina não satisfaz os requisitos.
-Já a **System Failure** é uma situação em que a maquina e os atores do mundo não satisfazem os objetivos essenciais dos stakeholders. 
+Já a **System Failure** é uma situação em que o mundo não satisfaz os objetivos essenciais dos stakeholders. *Exemplo*: Uma ambulância é despachada mas ela leva mais de 14 minutos para chegar ao destino.
 
 Um **defeito de implementação** é um bug de computador.
 Um **defeito do requisito** é uma característica da descrição do requisito que pode causar uma machine failure ou um system failure. Requisitos mal feitos é um defeito de requisito. 
 
 Um **erro de implementação** é um erro causado por um programador na implementação. Normalmente é a causador do defeito de implementação.
-Um **erro de requisito** é um erro na comunicação e entendimento dos requisitos da maquina que podem causar um system failure. 
+Um **erro de requisito** é um erro na comunicação e entendimento dos requisitos da maquina que podem causar um system failure. Quando não existem requisitos ou os requisitos não estão claros o suficiente e fica a cargo da interpretação do programador.
 
 **Três tipos de erros**
 	**Erro de entendimento** da necessidade do Stakeholder (G): O objetivo não descreve corretamente o objetivo do stakeholder.
-	**Requisitos inadequados devido a rasões incorretas (R):** O requerimento era insuficiente para satisfazer o objetivo (G) quando o domínio (D) é correto.
+	**Requisitos inadequados devido a raciocínios incorretos (R):** O requisito era insuficiente para satisfazer o objetivo (G) quando o domínio (D) é correto.
 	**Premissas invalidas (D):** algumas premissas em domínio (D) que não se adéqua ao mundo.
 
 **Exemploa:**
 ![[Pasted image 20250410104611.png]]
-Nesse caso, trata-se de uma Falha do sistema (Machine Failure). Uma vez que as necessidades estavam vagas.
+Nesse caso, trata-se de uma Falha do sistema (System Failure). Uma vez que as necessidades estavam vagas.
 Os requisitos não foram suficientes para suprir o objetivo de frenagem em uma pista molhada. (**Requisitos inadequados**)
- 
+ x
 Exemplo 2:
 ![[Pasted image 20250410114421.png]]
 O software não tinha erro de implementação, mas sim um erro de requisitos.
@@ -78,3 +78,33 @@ Exemplo 3:
 Exemplo 4:
 ![[Pasted image 20250410112944.png]]
 A justificativa é a mesma do exemplo 2.
+
+# Requisitos no ciclo de vida do Software
+**Modelo Cascata (Waterfall)**
+	1. Requirements 
+	2. Architecture
+	3. Development
+	4. Testing
+	5. Operation
+Não é um modelo muito adequado uma vez que tem que saber tudo o que será cumprido no fim do projeto. Nada deve mudar durante o desenvolvimento.
+Os clientes e Stakeholders devem esperar um tempo muito longo até que o projeto esteja pronto.
+
+**Ciclo de desenvolvimento ágil**
+	Agile = interativo + incremental
+	**Interativo:** Apesar de ter o objetivo final, vai desenvolvendo aos poucos implementando, não o resultado completo, mas coisas que já dão valor ao produto. Ex.: Melhorar o texto de um capítulo existente em um livro.
+	**Incremental:** Vai aos poucos implementando novas features. Ex.: Colocar novos capítulos em um livro.
+	A ideia é ter interações curtas que entregam cedo que agreguem valor ao produto
+
+
+O **Waterfall** tem um foco maior no reuso e gerenciamento formal das requisições
+Já o **Agile** prioriza o que será construido depois, ter entendimento rápido e os requisitos são testaveis, para verificar com o cliente se está de fato agregando valor.
+
+**Twin Peaks Model** 
+	Requisitos e arquiteturas devem ser definidos juntos
+	Consiste na implementação paralela dos requisitos e na arquitetura. Ambos são desenvolvidos simultaneamente.
+	Os requisitos dá a forma da arquitetura.
+	A arquitetura revela os custos e dá o equilibrio para criação de novas oportunidades para a visão de novos requisitos
+	![[Pasted image 20250415111220.png]]
+	**V-Model**
+		![[Pasted image 20250415104422.png]]
+
