--- a/Banco de Dados/3. BD.md
+++ b/Banco de Dados/3. BD.md
@@ -1,38 +1,4 @@
 ![[Pasted image 20250403141510.png]]
-# Terminologias
-**Minimundo**: Representa um problema do mundo real
-**DBA**: O Administrador de banco de dados é o responsável por gerencia os bancos de dados, fazendo as verificações, aumento ou diminuição de banco de dados, entre outras informações.
-**Analistas de Sistemas:** São os responsáveis por avaliar os dados do Banco de dados.
-
-**Esquema:** É a estrutura do banco de dados.
-**Instância:** São os dados que estão sendo armazenados. Pode ser de uma linha, pode ser de uma tabela, ou pode ser todos os dados em um banco de dados.
-**Estado:** É todo o banco de dados em um dado momento.
-
-**Dado x Informação**
-**Dado** é o valor bruto armazenado.
-**Informação** é o significado do dado.
-
-**Entidade:** Trata-se de um conjunto de instancias referentes a um dado. Exemplo: E1 (Jose, M003, 5000,00), E2 (Maria, M001, 6000,00).
-
-**Atributos Compostos:** Consiste em valores atributos básicos. Eles serão retratados em forma de retângulo.
-**Atributos Simples (Atônico):** Apenas um tipo de atributo. Serão retratados em forma de elipse.
-
-**Atributo monovalorado:** Precisa de apenas um espaço para alocar, como nomes.
-	![[Pasted image 20250403141643.png]]
-
-**Atributo Multivalorado:** Pode ter um conjunto de valores para uma mesma entidade. Como o caso entidades que possuem múltiplos emails.
-	![[Pasted image 20250403141618.png]]
-
-**Atributo Derivado ou Virtual:** É aquele que pode ser obtido a partir de outros atributos. Exemplo, idade de uma pessoa.
-	![[Pasted image 20250403141542.png]]
-
-**Valores NULL:** Valor vazio.
-
-**Atributo Chave:** É uma identificação única de cada entidade.
-
-**Entidade fraca:** Trata-se de uma entidade que não possui uma chave de identificação.
-	![[Pasted image 20250403143149.png]]
-
 # Modelos de dados
 É uma forma de descrever como será o banco de dados
 Serão estudados os modelos:
@@ -63,45 +29,82 @@ Esquema Lógico ou conceitual o modelo de dados em um SBGD específico
 	V
 Projeto físico
 ```
+# Modelo Entidade Relacionamento
+**Minimundo**: Representa um problema do mundo real
+**DBA**: O Administrador de banco de dados é o responsável por gerencia os bancos de dados, fazendo as verificações, aumento ou diminuição de banco de dados, entre outras informações.
+**Analistas de Sistemas:** São os responsáveis por avaliar os dados do Banco de dados.
 
-## Relacionamentos
-É um conjunto de associações entre entidades.
-Os relacionamentos podem possuir múltiplos graus.
-**Relacionamento binário**
-	![[Pasted image 20250403143950.png]]
-**Relacionamento terciário**
-	![[Pasted image 20250403144021.png]]
 
-**Relacionamento Recursivo:** 
-	![[Pasted image 20250403144158.png]]
-	![[Pasted image 20250403144419.png]]
+**Esquema:** É a estrutura do banco de dados.
+	![[Pasted image 20250421165938.png]]
+**Instância:** São os valores que estão sendo armazenados. Pode ser de uma linha, pode ser de uma tabela, ou pode ser todos os dados em um banco de dados.
+	![[Pasted image 20250421165845.png]]
+**Estado:** Uma fotografia do banco de dados completo, ou seja, todos os dados daquele banco de dados.
+	![[Pasted image 20250421170025.png]]
+**Dado x Informação**
+	**Dado** é o valor bruto armazenado.
+		![[Pasted image 20250421170139.png]]
+	**Informação** é o significado do dado.
+		![[Pasted image 20250421170249.png]]
+		Maristela Holanda é uma professora do departamento de Ciencia da computação. Ela dá a disciplina de Banco de dados, possui as pesquisas cientificas X, Y e Z. 
 
-**Propriedades do relacionamento**
-	**Restrição de Cardinalidade**
-		![[Pasted image 20250403145758.png]]
-	**Restrição de Participação**
-		![[Pasted image 20250403145830.png]]
-		**Total:** Só pode existir se existir o relacionamento. Representado por duas linhas
-			![[Pasted image 20250403152943.png]]
-		**Parcial:** Não precisa existir um relacionamento, o objeto pode existir sozinho. Representado por uma linha
-			![[Pasted image 20250403152902.png]]
 
-## Cardinalidade
-Os relacionamentos podem ter uma quantidade mínima, que é dada como sendo a participação, e máxima, que é a cardinalidade.
-![[Pasted image 20250410142434.png]]
+**Entidade:** Trata-se de um conjunto de instancias referentes a um dado. Exemplo: E1 (Jose, M003, 5000,00), E2 (Maria, M001, 6000,00).
 
-Nesse modelo, deixa-se de adotar os dois traços, e a participação total passa a ser expressa como sendo o valor minimo da cardinalidade. Enquanto que o valor máximo é igual ao valor original.
-![[Pasted image 20250410143847.png]]
+**Atributos**
+	**Atributos Compostos:** Consiste em valores atributos básicos.
+	![[Pasted image 20250415162603.png]]
+	**Atributos Simples (Atônico):** Apenas um tipo de atributo. Serão retratados em forma de elipse.
+	**Atributo monovalorado:** Precisa de apenas um espaço para alocar, como nomes.
+		![[Pasted image 20250403141643.png]]
+	**Atributo Multivalorado:** Quando uma entidade pode possui vário atributos de um mesmo tipo. Exemplo, telefone e email, um mesmo usuario pode possuir vários telefones ou varios emails.
+		![[Pasted image 20250403141618.png]]
+	**Atributo Derivado ou Virtual:** É aquele que pode ser obtido a partir de outros atributos. Exemplo, idade de uma pessoa, que pode ser possuído a partir da conta do ano em que a pessoa nasceu.
+		![[Pasted image 20250403141542.png]]
+	**Atributo Chave:** É o atributo usado para identificar uma entidade e meio a outras entidades. É representado por um underline no atributo.
+		Chaves simples possuem unicidade de dados, ou seja, eles devem ser únicos, não podendo se repetir.
+		Chaves compostas não possuem unicidade de dados, uma vez que ela é composta por mais de um atributo.
+		![[Pasted image 20250415162937.png]]
 
-## Generalização/Especialização
-**Generalização/especialização total**: Toda instancia genérica está associada com outras instâncias.
-No exemplo a seguir, todo funcionário deve ser pessoa Física ou Pessoa Jurídica.
-![[Pasted image 20250410145546.png]]
 
-**Generalização/especialização parcial:** Pode ter instancias genéricas que não está especializadas em outras instâncias
-No exemplo a seguir, um funcionário pode assumir o cargo de gerente de marketing, gerente de vendas ou apenas um funcionário comum.
-![[Pasted image 20250410145937.png]]
+**Entidade fraca:** Trata-se de uma entidade que não possui uma chave de identificação. Adota-se então uma chave composta, que é um conjunto de chaves de outras entidades relacionadas a entidade fraca com os atributos da entidade fraca formam a chave da entidade fraca.
+	![[Pasted image 20250415164554.png]]
+	Neste exemplo, *Dependente* é fraco em relação ao funcionario, então ele adota uma chave composta que possui os atributos *Nome* de Dependente e *Matricula* de funcionário.
+	Percebe-se também que no caso de entidades fracas, usa-se um losango duplo  para representar o relacionamento que usara para a chave composta e duas linhas para identificar que é uma participação total.
 
-## Relacionamento Ternário
-Nesse tipo de relacionamento, utiliza-se o conjunto para identificar a cardinalidade.
-![[Pasted image 20250410152616.png]]
+**Relacionamentos:**
+	É um conjunto de associações entre entidades.
+	**Relacionamento binário**
+		![[Pasted image 20250403143950.png]]
+	**Relacionamento Ternário**
+		![[Pasted image 20250410152616.png]]
+		Um Distribuidor pode distribuir em uma cidade **N** produtos; Um produto pode ser distribuído por um distribuidor em **N** cidades. Um produto pode ser distribuído em uma cidade por **Um único** distribuidor.
+	**Relacionamento Recursivo:** 
+		![[Pasted image 20250403144419.png]]
+		Um funcionário pode ser supervisor de outro funcionário, ou vice-versa.
+	**Propriedades do relacionamento**
+		**Restrição de Cardinalidade**
+			![[Pasted image 20250403145758.png]]
+			Os relacionamentos podem ter uma quantidade mínima, que é dada como sendo a participação, e máxima, que é a cardinalidade. A participação define se a participação é total, se for 1, ou parcial, se for 0. Já a cardinalidade é a quantidade máxima de elementos que o relacionamento pode ter.
+			![[Pasted image 20250410142434.png]]
+			![[Pasted image 20250410143847.png]]
+		**Restrição de Participação**
+			![[Pasted image 20250403145830.png]]
+			**Total:** Só pode existir se existir o relacionamento. Representado por duas linhas
+				![[Pasted image 20250403152943.png]]
+			**Parcial:** Não precisa existir um relacionamento, o objeto pode existir sozinho. Representado por uma linha
+				![[Pasted image 20250403152902.png]]
+
+**Generalização/Participação:**
+	**Generalização Total:** Toda instancia genérica está associada com outras instâncias.
+		No exemplo a seguir, todo funcionário deve ser pessoa Física ou Pessoa Jurídica.
+		![[Pasted image 20250410145546.png]]
+	**Generalização parcial:** Pode ter instancias genéricas que não está especializadas em outras instâncias
+		No exemplo a seguir, um funcionário pode assumir o cargo de gerente de marketing, gerente de vendas ou apenas um funcionário comum.
+		![[Pasted image 20250410145937.png]]
+
+# Erros
+![[Pasted image 20250415142320.png]]
+
+![[Pasted image 20250415145244.png]]
+É um erro colocar o código de um departamento em empregado, isso porque é um atributo que pertence a apenas um departamento.
