adicionando novos arquivos

--- a/Introdução a Inteligência Artificial/2. Métodos para resolução de problemas.md
+++ b/Introdução a Inteligência Artificial/2. Métodos para resolução de problemas.md
@@ -21,9 +21,9 @@ Nesse modelo de busca, adotam-se estratégias especificas:
 Segue uma ordem de expansão de nós:
 	Sai de um nó raiz e acessa todos os vizinhos.
 
-Nesse modelo, o algoritmo pode ser **Completo** (encontra uma solução, não necessariamente a mais curta), ou pode ser **Ótima** (Encontra a melhor solução para um algoritmo).
+Nesse modelo, o algoritmo pode ser **Completo** (encontra uma solução, não necessariamente a melhor), ou pode ser **Ótima** (Encontra a melhor solução para um algoritmo).
 
-A maior vantagem desse modelo é em relação de custo de tempo, além de ser completa em espaços de estados infinitos.
+A maior vantagem desse modelo é em relação de custo de tempo, mas é incompleta em espaços de estados infinitos.
 
 O problema da **busca em largura** é o custo de memória, uma vez que esse modelo de busca vai ter um maior custo de memória. Esse modelo só dará bons resultados se a árvore de busca for pequena.
 
@@ -31,11 +31,33 @@ O problema da **busca em largura** é o custo de memória, uma vez que esse mode
 ![[Pasted image 20250331152626.png]]
 É similar a [[#Busca em largura]] só que começando pelo que possui menor custo. A busca é feita passando por todos os menores caminhos e o menor caminho de todos será o caminho adotado.
 
+Exemplo da imagem a cima, a busca se daria da seguinte forma
+- Inicio: S
+- Destino: G
+1. Começa com S (Custo 0)
+2. Expande S
+	- A (Custo 1)
+	- B (Custo 5)
+	- C (Custo 15)
+3. Escolhe A (menor custo)
+4. Expande A
+	- G (Custo 11)
+5. Agora temos: B(5), C(15), G(11)
+6. Escolhe B (Custo 5)
+7. Expande B
+	- G (Custo 10) -> este é menor do que o G que havíamos encontrado, então escolhemos esse caminho pra G.
+8. Agora temos: C(15), G(10)
+9. Escolhe G (Custo 10) -> Objetivo, mas não sabe se esse caminho é ótimo
+10. Escolhe C
+11. Expande C
+	- G (20) -> Já existe caminho de custo 10, ignora
+12. Escolhe o caminho S, B, G de custo 10.
 
+É ótima se a profundidade do próximo nó for maior ou igual a profundidade do nó atual. Contudo é incompleta em espaços de estados infinitos.
 ## Busca em profundidade
 Faz a expansão da busca pelos nós mais profundas da árvore. Ao chegar ao final e não encontrar uma solução, o algoritmo volta para o nó anterior e tentar fazer outro caminho. 
 
-É um algoritmo eficaz em termo de tempo, uma vez que é mais rápida do que a [[#Busca em largura]], contudo não é completa caso a arvore tenha estados infinitos ou seja muito profunda.
+É um algoritmo eficaz em termo de memória, contudo não é completa caso a arvore tenha estados infinitos ou seja muito profunda.
 
 ### Busca em profundidade Limitada
 Será limitado a apenas um nível, ou seja só poderá buscar até um nível especifico.
@@ -44,8 +66,10 @@ Será limitado a apenas um nível, ou seja só poderá buscar até um nível esp
 ### Busca em aprofundamento iterativo
 Tenta limites com valores crescentes, partindo de zero, até encontrar a primeira solução.
 Combina as vantagens de busca em largura com busca em profundidade​.
-Trata-se de um algoritmo ótimo e completo.​
 
+Fixa a profundidade em I, enquanto não encontrar o objetivo, recomeça uma busca em profundidade naquele nível até encontrar o objetivo ou encontrar todos os nós daquele nivel.
+
+Trata-se de um algoritmo ótimo e completo.​
 ## Direção de busca
 ### Encadeamento progressivo (Forward Chaining)
 É uma busca iniciado a partir de um estado inicial
@@ -101,7 +125,7 @@ Se a heurística for igual a 0 (h(n) = 0), então a busca se torna equivalente a
 
 ![[Pasted image 20250407152140.png]]
 ![[Pasted image 20250407145245.png]]
-
+	
 ### Exemplo
 h1(n) = número de peças fora de posição
 h2(n) = somar os valores da distância de cada peça até a sua posição de destino.
