--- a/Sistemas da Informação/1. Engenharia de requisitos.md
+++ b/Sistemas da Informação/1. Engenharia de requisitos.md
@@ -28,6 +28,10 @@ Funct   Fenomeno      Stakhold. need
           State or Event
 O mundo é o escopo dos requisito investigados para um software.
 
+**Exemplo:**
+	![[Pasted image 20250408112003.png]]
+**Exercicio:**
+	![[Pasted image 20250408115752.png]]
 ## **Fenômenos**
 São estados ou eventos observáveis. 
 	**Evento:** é alguma coisa ocorrendo em um dado tempo. 
@@ -43,6 +47,7 @@ Atores são entivdade que podem performar ator em um Mundo. Eles podem ser Maqui
 ## Stakeholder
 Partes interessadas pelo projeto.
 
+
 # Erros de requisitos
 **Terminologias**
 	**Falha** é uma situação em que um produto não funciona como esperado. O defeito (Causa) pode ser a causa da minha falha (Consequência).
@@ -50,7 +55,7 @@ Partes interessadas pelo projeto.
 	**Erro** é uma falha humana que gera o defeito.
 
 Uma **Machine Failure** é uma situação em que a maquina não satisfaz os requisitos.
-Já a **System Failure** é uma situação em que o mundo não satisfaz os objetivos essenciais dos stakeholders. *Exemplo*: Uma ambulância é despachada mas ela leva mais de 14 minutos para chegar ao destino.
+Já a **System Failure** é uma situação em que o mundo (Maquina e atores) não satisfaz os objetivos essenciais dos stakeholders. *Exemplo*: Uma ambulância é despachada mas ela leva mais de 14 minutos para chegar ao destino.
 
 Um **defeito de implementação** é um bug de computador.
 Um **defeito do requisito** é uma característica da descrição do requisito que pode causar uma machine failure ou um system failure. Requisitos mal feitos é um defeito de requisito. 
@@ -58,16 +63,16 @@ Um **defeito do requisito** é uma característica da descrição do requisito q
 Um **erro de implementação** é um erro causado por um programador na implementação. Normalmente é a causador do defeito de implementação.
 Um **erro de requisito** é um erro na comunicação e entendimento dos requisitos da maquina que podem causar um system failure. Quando não existem requisitos ou os requisitos não estão claros o suficiente e fica a cargo da interpretação do programador.
 
-**Três tipos de erros**
+**Três tipos de erros de requisitos**
 	**Erro de entendimento** da necessidade do Stakeholder (G): O objetivo não descreve corretamente o objetivo do stakeholder.
 	**Requisitos inadequados devido a raciocínios incorretos (R):** O requisito era insuficiente para satisfazer o objetivo (G) quando o domínio (D) é correto.
 	**Premissas invalidas (D):** algumas premissas em domínio (D) que não se adéqua ao mundo.
 
-**Exemploa:**
+**Exemplos:**
 ![[Pasted image 20250410104611.png]]
 Nesse caso, trata-se de uma Falha do sistema (System Failure). Uma vez que as necessidades estavam vagas.
 Os requisitos não foram suficientes para suprir o objetivo de frenagem em uma pista molhada. (**Requisitos inadequados**)
- x
+
 Exemplo 2:
 ![[Pasted image 20250410114421.png]]
 O software não tinha erro de implementação, mas sim um erro de requisitos.
