--- a/Sistemas da Informação/2. Requisitos no contexto mais amplo.md
+++ b/Sistemas da Informação/2. Requisitos no contexto mais amplo.md
@@ -1,5 +1,5 @@
 # Requisitos em projetos de clientes
-O Software é desenvolvimento para um clinete especifico
+O Software é desenvolvimento para um cliente especifico
 O Projeto é definido de forma legal por meio de um contrato.
 ![[Pasted image 20250422100915.png]]
 
